got a new footer, it be m left foot

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 20px;">
+<div class="container content" style="margin-top: 20px;">
   <div class="row" style="border-bottom: 1px solid black; margin-bottom: 5px;">
     <button class="btn btn-small btn-success" (click)="export()">Export Current to Excel <i
         class="fas fa-file-excel"></i></button>
