--- a/src/app/apply/apply.component.html
+++ b/src/app/apply/apply.component.html
@@ -1,4 +1,4 @@
-<div class="box" style="background-image: url('../images/wallpaper_2.jpg'); padding-top: 1%; padding-bottom: 1%">
+<div class="box content" style="background-image: url('../images/wallpaper_2.jpg'); padding-top: 1%; padding-bottom: 1%">
   <div class = "container" style="border-style: solid; background-color: white;">
     <div class = 'row'>
       <div class ="col-sm-3">
