--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer style="background-color: rgb(20, 59, 107); color: white;" >
+<footer class="footer" style="background-color: rgb(20, 59, 107); color: white;" >
     <div style="text-align: center">
       <div>
         <h6 class="display-6" style="text-align: center; font-size: 16px;">Site Powered by Crescent Cool Cats</h6>
@@ -10,4 +10,4 @@
         <a style="text-decoration: none; color: white;" href="mailto:qurockclimbing@gmail.com"><i class="fas fa-address-book right"></i> Email</a>
       </div>
     </div>
-  </footer>
+</footer>
