--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="content">
 <form (submit)="loginUser($event)">
   <h3 style="padding-top:5%">Admin Login</h3>
   <hr>
@@ -14,3 +15,4 @@
 	<center><a class="btn btn-success" href="/sign-up">Sign Up</a></center>
 	</div>
 </form>
+</div>
