--- a/src/app/eboard/eboard.component.html
+++ b/src/app/eboard/eboard.component.html
@@ -1,3 +1,4 @@
+<div class="content">
 <div class="row" style="padding-top: 2%; padding-bottom: 2%">
   <div style="margin: auto;">
     <h1>Meet the E-Board</h1>    
@@ -47,4 +48,5 @@
         </mdb-card>
       </div>
     </div>
+</div>
 </div>
