--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,3 +1,4 @@
+<div class="content">
 <div class="row" style="padding-top: 2%; padding-bottom: 2%">
   <div style="margin: auto;">
     <h1>News</h1>
@@ -27,4 +28,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
