--- a/src/app/pending/pending.component.html
+++ b/src/app/pending/pending.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top: 25px;">
+<div class="container content" style="margin-top: 25px;">
 	<div class="row">
 		<div *ngIf="loading" style="margin: auto !important;">
 			<img src="src/app/includes/images/loading.gif">
