--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+
+.content {
+  min-height: calc(95vh - 70px);
+}
+.footer {
+  height: 100px;
 }
