commit message who?

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
 
     <div class="container-fluid no-padding">
       <div class="row no-gutter">
-        <div class="col-lg-3 col-sm-6" style="padding-left: 0px;">
+        <div class="col-md-3" style="padding-left: 0px;">
           <!-- <a></a> -->
           <img [src]="images[1]" width="{{picWidth}}" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
@@ -35,7 +35,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-md-3">
           <img [src]="images[0]" width="{{picWidth}}" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
@@ -45,7 +45,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-md-3">
           <img [src]="images[2]" width="{{picWidth}}" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
@@ -55,7 +55,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-md-3">
           <img [src]="images[3]" width="{{picWidth}}" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
