--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <navbar class="navbar navbar-expand-lg navbar-light" style="background-color: white">
 
-  <a class="navbar-brand-sm" href="home"><img [src]="images[0]" alt="nav logo" height="55em" width="55em"></a>
+  <a class="navbar-brand-sm" [routerLink]="['home']"><img [src]="images[0]" alt="nav logo" height="55em" width="55em"></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle">
     <span class="navbar-toggler-icon"></span>
