--- a/src/app/apply/apply.component.html
+++ b/src/app/apply/apply.component.html
@@ -1,30 +1,35 @@
-<div class="box content" style="background-image: url('../images/wallpaper_2.jpg'); padding-top: 1%; padding-bottom: 1%">
-  <div class = "container" style="border-style: solid; background-color: white;">
-    <div class = 'row'>
-      <div class ="col-sm-3">
+<div class="box content"
+  style="background-image: url('../images/wallpaper_2.jpg'); padding-top: 1%; padding-bottom: 1%">
+  <div class="container" style="border-style: solid; background-color: white;">
+    <div class='row'>
+      <div class="col-sm-3">
       </div>
-      <div class ="col-sm-6">
+      <div class="col-sm-6">
         <div class="titleHolder" style="padding-top:10px; padding-bottom:10px;">
           <h2>Apply for Membership</h2>
         </div>
         <form #applicantForm="ngForm" (ngSubmit)="apply()" novalidate>
-          <div class = "textHolder">
-            <input [(ngModel)]="applicant.name" class="form-control" type="text" name="name" placeholder="Name" required style="width: 100%;"><br>
+          <div class="textHolder">
+            <input [(ngModel)]="applicant.name" class="form-control" type="text" name="name" placeholder="Name" required
+              style="width: 100%;"><br>
           </div>
-          <div class = "textHolder">
-            <input [(ngModel)]="applicant.email" class="form-control" type="text" name="email" placeholder="Email Address" required style="width: 100%;"><br>
+          <div class="textHolder">
+            <input [(ngModel)]="applicant.email" class="form-control" type="text" name="email"
+              placeholder="Email Address" required style="width: 100%;"><br>
           </div>
-          <div class = "textHolder">
+          <div class="textHolder">
             <input [(ngModel)]="applicant.belayCertified" type="checkbox" name="belay"> Are you Belay Certified?<br>
           </div>
-          <div class = "textHolder">
-            <input [(ngModel)]="applicant.year" class="form-control" type="number" name="year" placeholder="Expected Grad Year" required style="width: 35%;"><br>
+          <div class="textHolder">
+            <input [(ngModel)]="applicant.year" class="form-control" type="number" name="year"
+              placeholder="Expected Grad Year" required style="width: 35%;"><br>
           </div>
-          <div class = "textHolder">
-            <input [(ngModel)]="applicant.reasoning" class="form-control" type="text" name="reasoning" placeholder="Why would you want to join?" style="width: 100%; height: 100px;"><br>
+          <div class="textHolder">
+            <input [(ngModel)]="applicant.reasoning" class="form-control" type="text" name="reasoning"
+              placeholder="Why would you want to join?" style="width: 100%; height: 100px;"><br>
           </div>
-          <div class = "buttonHolder">
-             <input class="btn btn-success" type="submit" name="">
+          <div class="buttonHolder">
+            <input class="btn btn-success" type="submit" name="">
 
           </div>
         </form>
