--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -31,7 +31,7 @@
                 </div>
               </div>
               <div class="col-4" style="padding-top: 6%">
-                <app-event-register-modal-component></app-event-register-modal-component>
+                <a class="btn btn-primary" href="/event-register/{{event.id}}">Event Register</a>
               </div>
             </div>
           </div>
