--- a/src/app/event-attendent-list/event-attendent-list.component.html
+++ b/src/app/event-attendent-list/event-attendent-list.component.html
@@ -4,7 +4,48 @@
       <img src="src/app/includes/images/loading.gif">
     </div>
   </div>
-  <table border="1" class="table table-bordered" *ngIf="!loading">
-    
+  <table border="1" class="table table-bordered table-hover" *ngIf="!loading">
+  	<thead class="thead-dark">
+	    <tr>
+	    	<th>Event</th>
+	    	<th>Description</th>
+	    	<th>Location</th>
+	    	<th>Date</th>
+	    	<th>Time</th>
+	    </tr>
+  	</thead>
+   	<tr *ngFor="let event of events" (click)="loadDetail(event._id)">
+    	<td>{{event.name}}</td>
+    	<td>{{event.description}}</td>
+    	<td>{{event.location}}</td>
+    	<td>{{event.date}}</td>
+    	<td>{{event.time}}</td>
+    </tr>
   </table>
+  <div class="row" style="margin-top: 50px;">
+    <div *ngIf="loading2" style="margin: auto !important;">
+      <img src="src/app/includes/images/loadingSmall.gif">
+    </div>
+  </div>
+  <div *ngIf="showDetail">
+	  <div style="border: 1px solid black"></div>
+	  <h4>Count: {{detail.length}}</h4>
+	  <table class="table table-bordered" *ngIf="detail.length > 0">
+	  	<thead class="thead-dark">
+		  	<tr>
+		  		<th>Name</th>
+		  		<th>Belay Certified</th>
+		  		<th>Driver</th>
+		  	</tr>
+		</thead>
+	  	<tr *ngFor="let detail of detail">
+	  		<td>{{detail.name}}</td>
+	  		<td>{{detail.belayCert == '1'? 'Yes':'No'}}</td>
+	  		<td>{{detail.driver == '1'? 'Yes':'No'}}</td>
+	  	</tr>
+	  </table>
+	  <div class="alert alert-info" *ngIf="detail.length == 0">
+	  	<h4>No Members Attending :(</h4>
+	  </div>
+  </div>
 </div>
