--- a/src/app/home-carousel/home-carousel.component.html
+++ b/src/app/home-carousel/home-carousel.component.html
@@ -4,9 +4,10 @@
       <img [src]="images[0]" alt="Random first slide" height="{{innerHeight}}" width="{{innerWidth}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
-    <div class="carousel-caption" style="padding-bottom: 125px; font-size: 25px; font-family: Arial, Helvetica, sans-serif">
+    <div class="carousel-caption" style="padding-bottom: 60px; font-size: 25px; font-family: Arial, Helvetica, sans-serif">
       <h1 class="h1-responsive" style="text-shadow: 2px 2px #000" height="{{introText}}">Welcome to the Rock Climbing Club</h1>
-      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000" height="{{introText}}">at Qunnipiac University!</h1>
+      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000; padding-bottom: 30px" height="{{introText}}">at Qunnipiac University!</h1>
+      <a class="ct-btn-scroll ct-js-btn-scroll" href="#whatsClimbing" ><img alt="Arrow Down Icon" src="https://www.solodev.com/assets/anchor/arrow-down.png"></a>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
@@ -14,11 +15,20 @@
       <img [src]="images[1]" alt="Random second slide" height="{{innerHeight}}" width="{{innerWidth}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
     </div>
+    <div class="carousel-caption" style="padding-bottom: 60px; font-size: 25px; font-family: Arial, Helvetica, sans-serif">
+      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000" height="{{introText}}">Events Every Semester</h1>
+      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000; padding-bottom: 30px" height="{{introText}}">in Various Gyms!</h1>
+      <a class="ct-btn-scroll ct-js-btn-scroll" href="#whatsClimbing" ><img alt="Arrow Down Icon" src="https://www.solodev.com/assets/anchor/arrow-down.png"></a>
+    </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
     <div class="view w-100">
       <img [src]="images[2]" alt="Random third slide" height="{{innerHeight}}" width="{{innerWidth}}">
       <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption" style="padding-bottom: 60px; font-size: 25px; font-family: Arial, Helvetica, sans-serif">
+      <h1 class="h1-responsive" style="text-shadow: 2px 2px #000; padding-bottom: 30px" height="{{introText}}">Join Today!</h1>
+      <a class="ct-btn-scroll ct-js-btn-scroll" href="#whatsClimbing" ><img alt="Arrow Down Icon" src="https://www.solodev.com/assets/anchor/arrow-down.png"></a>
     </div>
   </mdb-carousel-item>
 </mdb-carousel>
