--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 
     <app-home-carousel></app-home-carousel>
 
-    <div class="container" style="margin-top: 100px; margin-bottom: 100px">
+    <div class="container" id="whatsClimbing" style="margin-top: 100px; margin-bottom: 100px">
       <div class="row" style="margin-top: 20px; margin-bottom: 2%">
         <div class="col-3"></div>
         <div class="col-lg-6 text-center">
@@ -24,13 +24,13 @@
 
     <div class="container-fluid no-padding">
       <div class="row no-gutter">
-        <div class="col-md-3" style="padding-left: 0px;">
+        <div class="col-md-3">
           <!-- <a></a> -->
           <img [src]="images[1]" style="width: 100% !important" height="{{picHeight}}" class="img-responsive">
           <div class="infoBox">
             <div class="infoBoxContent">
               <div class="infoText">
-                Follow Us!
+                Climb Solo
               </div>
             </div>
           </div>
@@ -40,7 +40,7 @@
           <div class="infoBox">
             <div class="infoBoxContent">
               <div class="infoText">
-                Follow Us!
+                Group Trips
               </div>
             </div>
           </div>
@@ -50,7 +50,7 @@
           <div class="infoBox">
             <div class="infoBoxContent">
               <div class="infoText">
-                Follow Us!
+                Outdoors
               </div>
             </div>
           </div>
@@ -60,7 +60,7 @@
           <div class="infoBox">
             <div class="infoBoxContent">
               <div class="infoText">
-                Follow Us!
+                Training
               </div>
             </div>
           </div>
