--- a/src/app/event-attendent-list/event-attendent-list.component.html
+++ b/src/app/event-attendent-list/event-attendent-list.component.html
@@ -4,6 +4,7 @@
       <img src="src/app/includes/images/loading.gif">
     </div>
   </div>
+  <h4>Events</h4>
   <table border="1" class="table table-bordered table-hover" *ngIf="!loading">
   	<thead class="thead-dark">
 	    <tr>
@@ -29,7 +30,8 @@
   </div>
   <div *ngIf="showDetail">
 	  <div style="border: 1px solid black"></div>
-	  <h4>Count: {{detail.length}}</h4>
+	  <h4>Detailed View</h4>
+	  <h6>Count of Members Attending: {{detail.length}}</h6>
 	  <table class="table table-bordered" *ngIf="detail.length > 0">
 	  	<thead class="thead-dark">
 		  	<tr>
