--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -21,7 +21,7 @@
       <ng-template ngbTabContent>
         <div>
           <form #userForm="ngForm" (ngSubmit)="add()" novalidate>
-            <table border="1" class="table table-bordered">
+            <table border="1" class="table table-bordered table-hover">
               <tr>
                 <td>Name</td>
                 <td><input class="form-control" style="width: 250px;" name="name" type="text" [(ngModel)]="user.name"
@@ -70,17 +70,19 @@
             <img src="src/app/includes/images/loading.gif" height="300" width="300" style="margin: auto;">
           </div>
           <div class="container">
-            <table border="1" class="table table-bordered" *ngIf="!loading">
-              <tr>
-                <td>Id</td>
-                <td>name</td>
-                <td>email</td>
-                <td>year</td>
-                <td>belayCertified</td>
-                <td>position</td>
-                <td>isAdmin</td>
-                <td>Action</td>
-              </tr>
+            <table border="1" class="table table-bordered table-hover" *ngIf="!loading">
+              <thead class="thead-dark">
+                <tr>
+                  <th>Id</th>
+                  <th>name</th>
+                  <th>email</th>
+                  <th>year</th>
+                  <th>belayCertified</th>
+                  <th>position</th>
+                  <th>isAdmin</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
 
               <tr *ngFor="let data of userList; let ind = index">
                 <td>{{ind+1}}</td>
@@ -129,7 +131,7 @@
       <ng-template ngbTabContent>
         <div>
           <form #userForm="ngForm" (ngSubmit)="add()" novalidate>
-            <table border="1" class="table table-bordered">
+            <table border="1" class="table table-bordered table-hover">
               <tr>
                 <td>Event Name</td>
                 <td>
@@ -174,16 +176,18 @@
             <img src="src/app/includes/images/loading.gif" height="300" width="300" style="margin: auto;">
           </div>
           <div class="container">
-            <table border="1" class="table table-bordered" *ngIf="!loading">
-              <tr>
-                <td>Id</td>
-                <td>Event</td>
-                <td>Description</td>
-                <td>Location</td>
-                <td>Time</td>
-                <td>Date</td>
-                <td>Action</td>
-              </tr>
+            <table border="1" class="table table-bordered table-hover" *ngIf="!loading">
+              <thead class="thead-dark">
+                <tr>
+                  <th>Id</th>
+                  <th>Event</th>
+                  <th>Description</th>
+                  <th>Location</th>
+                  <th>Time</th>
+                  <th>Date</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
 
               <tr *ngFor="let data of eventsList; let ind = index">
                 <td>{{ind+1}}</td>
@@ -229,7 +233,7 @@
       <ng-template ngbTabContent>
         <div>
           <form #userForm="ngForm" (ngSubmit)="add()" novalidate>
-            <table border="1" class="table table-bordered">
+            <table border="1" class="table table-bordered table-hover">
               <tr>
                 <td>News Name</td>
                 <td>
@@ -262,15 +266,16 @@
             <img src="src/app/includes/images/loading.gif" height="300" width="300" style="margin: auto;">
           </div>
           <div class="container">
-            <table border="1" class="table table-bordered" *ngIf="!loading">
-              <tr>
-                <td>Id</td>
-                <td>News</td>
-                <td>Description</td>
-                <td>Link</td>
-                <td>Action</td>
-              </tr>
-
+            <table border="1" class="table table-bordered table-hover" *ngIf="!loading">
+              <thead class="thead-dark">
+                <tr>
+                  <th>Id</th>
+                  <th>News</th>
+                  <th>Description</th>
+                  <th>Link</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
               <tr *ngFor="let data of newsList; let ind = index">
                 <td>{{ind+1}}</td>
                 <td [hidden]="edit == ind">{{data.name}}</td>
@@ -310,7 +315,7 @@
       <ng-template ngbTabContent>
         <div>
           <form #userForm="ngForm" (ngSubmit)="add()" novalidate>
-            <table border="1" class="table table-bordered">
+            <table border="1" class="table table-bordered table-hover">
               <tr>
                 <td>Photo</td>
                 <td>
@@ -363,19 +368,22 @@
             <img src="src/app/includes/images/loading.gif" height="300" width="300" style="margin: auto;">
           </div>
           <div class="container">
-            <table border="1" class="table table-bordered" *ngIf="!loading">
-              <tr>
-                <td>Id</td>
-                <td>Photo</td>
-                <td>Name</td>
-                <td>Description</td>
-                <td>Position</td>
-                <td>Action</td>
-              </tr>
+            <table border="1" class="table table-bordered table-hover" *ngIf="!loading">
+              <thead class="thead-dark">
+                <tr>
+                  <th>Id</th>
+                  <th>Photo</th>
+                  <th>Name</th>
+                  <th>Description</th>
+                  <th>Position</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
 
               <tr *ngFor="let data of eboardList; let ind = index">
                 <td>{{ind+1}}</td>
                 <td [hidden]="edit == ind">{{data.eboardImage}}</td>
+                <td [hidden]="edit != ind">{{data.eboardImage}}</td>
                 <td [hidden]="edit == ind">{{data.name}}</td>
                 <td [hidden]="edit != ind"><input type="text" name="name" class="form-control" [(ngModel)]="editList.name"
                     value="{{editList.name}}"></td>
@@ -383,7 +391,8 @@
                 <td [hidden]="edit != ind"><input type="text" name="description" class="form-control" [(ngModel)]="editList.description"
                     value="{{editList.description}}"></td>
                 <td [hidden]="edit == ind">{{data.position}}</td>
-                <td [hidden]="edit != ind">
+                <td [hidden]="edit != ind">{{data.position}}</td>
+                <!-- <td [hidden]="edit != ind">
                   <select class="form-control" style="width: 250px;" name="desc" type="text"
                     [(ngModel)]="editList.position" required>
                     <option value="president">President</option>
@@ -394,7 +403,7 @@
                     <option value="secretary">Secretary</option>
                     <option value="advisor">Faculty Advisor</option>
                   </select>
-                </td>
+                </td> -->
                 <td [hidden]="edit == ind">
                   <a (click)="showEdit(ind)" class="btn btn-primary" style="color: white">Edit</a>
                   <a (click)="delete(data.id, data.name)" class="btn btn-danger" style="color: white">Delete</a>
