--- a/src/app/event-register/event-register.component.html
+++ b/src/app/event-register/event-register.component.html
@@ -1,32 +1,40 @@
-<div class="content">
-    <div class="row" *ngIf="loading">
-      <img src="src/app/includes/images/loading.gif" height="300" width="300" style="margin: auto;">
-    </div>
-	<div class="container" style="margin-top: 25px;" *ngIf="!loading">
-      <h4>Event Register</h4>
-      <div>
-      <form #eventRegForm="ngForm" (ngSubmit)="submitRegistration()" novalidate>
-        <div class="form-group">
-          <select class="form-control" [(ngModel)]="selected.name" name="selectName" style="width: 250px;">
-            <option  value='{{member.name + "@@@" + member.id}}' *ngFor="let member of userList">{{member.name}}</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="belayCert">Belay Certified? (Choose one)</label>
-          <br>
-          <label class="radio-inline"><input type="radio" value="1" name="belayCert" [(ngModel)]="selected.belayCert">Yes</label>
-          <label class="radio-inline" style="padding-left:10px;"><input type="radio" value="0" name="belayCert" [(ngModel)]="selected.belayCert">No</label>
-        </div>
-        <div class="form-group">
-          <label for="driver">Driver? (Choose one)</label>
-          <br>
-          <label class="radio-inline"><input type="radio" value="1" name="driver" [(ngModel)]="selected.driver">Yes</label>
-          <label class="radio-inline" style="padding-left:10px;"><input type="radio" name="driver" value="0" [(ngModel)]="selected.driver">No</label>
-        </div>
-        <div>
-          <button type="submit" class="btn btn-primary" style="float:right">Submit</button>
-        </div>
-      </form>
+<div class="box content" style="padding-top: 1%; padding-bottom: 1%">
+  <div class="container" style="border-style: solid; background-color: white;">
+    <div class='row'>
+      <div class="col-sm-3">
       </div>
+      <div class="col-sm-6">
+        <div class="titleHolder" style="padding-top:10px; padding-bottom:10px;">
+          <h2>Event Register</h2>
+        </div>
+        <form #eventRegForm="ngForm" (ngSubmit)="submitRegistration()" novalidate>
+          <div class="form-group">
+            <select class="form-control" [(ngModel)]="selected.name" name="selectName" style="width: 250px;">
+              <option value='{{member.name + "@@@" + member.id}}' *ngFor="let member of userList">{{member.name}}
+              </option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="belayCert">Belay Certified? (Choose one)</label>
+            <br>
+            <label class="radio-inline"><input type="radio" value="1" name="belayCert"
+                [(ngModel)]="selected.belayCert">Yes</label>
+            <label class="radio-inline" style="padding-left:10px;"><input type="radio" value="0" name="belayCert"
+                [(ngModel)]="selected.belayCert">No</label>
+          </div>
+          <div class="form-group">
+            <label for="driver">Driver? (Choose one)</label>
+            <br>
+            <label class="radio-inline"><input type="radio" value="1" name="driver"
+                [(ngModel)]="selected.driver">Yes</label>
+            <label class="radio-inline" style="padding-left:10px;"><input type="radio" name="driver" value="0"
+                [(ngModel)]="selected.driver">No</label>
+          </div>
+          <div>
+            <input class="btn btn-success" type="submit" name="">
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </div>
