--- a/src/app/event-attendent-list/event-attendent-list.component.html
+++ b/src/app/event-attendent-list/event-attendent-list.component.html
@@ -16,13 +16,15 @@
 		    	<th>Time</th>
 		    </tr>
 	  	</thead>
-	   	<tr *ngFor="let event of events" (click)="loadDetail(event._id)">
-	    	<td>{{event.name}}</td>
-	    	<td>{{event.description}}</td>
-	    	<td>{{event.location}}</td>
-	    	<td>{{event.date}}</td>
-	    	<td>{{event.time}}</td>
-	    </tr>
+	  	<tbody>
+		   	<tr *ngFor="let event of events" (click)="loadDetail(event._id)">
+		    	<td>{{event.name}}</td>
+		    	<td>{{event.description}}</td>
+		    	<td>{{event.location}}</td>
+		    	<td>{{event.date}}</td>
+		    	<td>{{event.time}}</td>
+		    </tr>
+	  	</tbody>
 	  </table>
   </div>
   <div class="row" style="margin-top: 50px;">
