--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content container">
     <div class="row" style="padding-top: 2%; padding-bottom: 2%">
       <div style="margin: auto;">
         <h1>Our Events</h1>
